--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "dev": "rollup -c rollup.config.dev.js -w",
     "build": "node ./scripts/build.js",
-    "buildDev": "npm run build -- -d",
-    "buildProd": "npm run build -- -r",
+    "buildDev": "npm run build -- -d -t -s",
+    "buildProd": "npm run build -- -r -t",
     "server": "npx http-server ./ -c-1"
   },
   "main": "index.js",
