--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "eva-plugin-demo",
   "version": "0.1.0",
   "scripts": {
-    "dev": "rollup -c rollup.config.dev.js -w",
+    "dev": "npx vite ./example -c ./example/vite.config.ts",
     "build": "node ./scripts/build.js",
     "buildDev": "npm run build -- -d -t -s",
-    "buildProd": "npm run build -- -r -t",
-    "server": "npx http-server ./ -c-1"
+    "buildProd": "npm run build -- -r -t"
   },
   "main": "index.js",
   "module": "./dist/plugin.esm.js",
@@ -59,6 +58,7 @@
     "rollup-watch": "^4.3.1",
     "terser": "^4.2.1",
     "typescript": "^3.6.4",
+    "vite": "^2.4.4",
     "zlib": "^1.0.5"
   },
   "engines": {
@@ -67,6 +67,7 @@
   "dependencies": {
     "@eva/eva.js": "^1.0.1-alpha.3",
     "@eva/plugin-renderer": "^1.0.1-alpha.3",
-    "@eva/renderer-adapter": "^1.0.1-alpha.3"
+    "@eva/renderer-adapter": "^1.0.1-alpha.3",
+    "pixi.js": "^4.8.7"
   }
 }
